# sntrup

./: Cargo.toml  README.md
.github/workflows/: bench.yml  sntrup.yml
benches/: mod.rs
src/: kem.rs  lib.rs  params.rs  r3.rs  rq.rs  types.rs  utils.rs  zx.rs
src/r3/: vector.rs
src/rq/: encoding.rs  vector.rs
tests/: kat.rs  kem.rs  roundtrip.rs  serde.rs  sizes.rs
